codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__shift_tab_cycles_to_plan_while_task_running.snap
---
source: tui/src/chatwidget/tests/permission_shortcuts_tests.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
● Working (0s)


› Ask Codex to do anything

  Plan Mode        · gpt-5.5 medium · /tmp/project                 Plan mode
