codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_compact_remote_v2_status.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Compacting remotely (v2) (0s)                                                 "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
