codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_context_usage_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "frames.join(\"\\n\\n\")"
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  Read Only        · Context 12.7K / 13k (70%)                                  "

"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  Read Only        · Context 1250K / 2000k (62%)                                "

"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  Read Only        · Context 999 / 2000k (0%)                                   "
